--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title></title>
-    <link rel="stylesheet" href="/app.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="app.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.8.1/semantic.min.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <script charset="utf-8" src="/jquery.js"></script>
+    <script charset="utf-8" src="jquery.js"></script>
     <script charset="utf-8" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.8.1/semantic.min.js"></script>
-    <script charset="utf-8" src="/app.js"></script>
+    <script charset="utf-8" src="app.js"></script>
 
     <div class="ui grid" id="student_pairs">
       <div class='four wide column'></div>
